[package]
name = "pillar"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.1"
log = "0.4.28"
env_logger = "0.11.8"
chumsky = { version = "0.11.2", features = ["pratt"] }
cranelift = "0.126.1"
target-lexicon = "0.13.3"
cranelift-native = "0.126.1"
cranelift-module = "0.126.1"
cranelift-object = "0.126.1"
cc = "1.2.48"

[build-dependencies]
