[package]
name = "pillar"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/roazanas/pillar"
readme = "README.md"

[dependencies]
logos = "0.15.1"
log = "0.4.28"
env_logger = "0.11.8"
chumsky = { version = "0.11.2", features = ["pratt"] }
cranelift = "0.126.1"
target-lexicon = "0.13.3"
cranelift-native = "0.126.1"
cranelift-module = "0.126.1"
cranelift-object = "0.126.1"
cc = "1.2.48"
ariadne = "0.6.0"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"


[[bin]]
name = "plrc"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
include = [
  "target/completions/plrc.bash",
  "target/completions/_plrc",
  "target/completions/plrc.fish",
  "target/completions/_plrc.ps1",
]
